修改bug。
